NTR - Fix wizard button alignment

--- a/Resources/views/administration/src/module/swag-migration/page/swag-migration-wizard/swag-migration-wizard.less
+++ b/Resources/views/administration/src/module/swag-migration/page/swag-migration-wizard/swag-migration-wizard.less
@@ -43,6 +43,10 @@
         @media screen and (max-width: 600px) {
             grid-template-columns: 0 1fr 1fr;
         }
+
+        .swag-migration-wizard__actions {
+            text-align: right;
+        }
     }
 
     .swag-migration-wizard-page-introduction,
